@startuml

entity "badges_versions" as BadgesVersions {
  id : integer
  created_at : timestamp
  created_by : integer
  title : varchar(255)
  description : text
  requirements : jsonb
}

entity "badges_definitions" as BadgesDefinitions {
  id : integer
  title : varchar(255)
  description : text
  created_at : timestamp
  created_by : integer
  modified_at : timestamp
  modified_by : integer
}

entity "requirements_definitions" as RequirementsDefinitions {
  id : integer
  badge_id : integer
  title : varchar(255)
  description : text
  created_at : timestamp
  created_by : integer
  modified_at : timestamp
  modified_by : integer
}

entity "users" as Users {
  id : integer
  name : varchar(255)
  roles : text[]
  created_at : timestamp
  modified_at : timestamp
}

entity "audit_trails" as AuditTrails {
  id : integer
  uuid : uuid
  created_at : timestamp
  created_by : text
  schema_name : text
  table_name : text
  op_name : text
  value_old : jsonb
  value_new : jsonb
  info : jsonb
}

BadgesVersions -- Users : created_by
BadgesDefinitions -- Users : created_by
BadgesDefinitions -- Users : modified_by
RequirementsDefinitions -- Users : created_by
RequirementsDefinitions -- Users : modified_by
RequirementsDefinitions -- BadgesDefinitions : badge_id

@enduml
